[package]
name = "logo"
version = "0.1.0"
edition = "2021"
description = "init log env quickly"
license = "MIT"
homepage = "https://github.com/greyireland/logx"
authors = ["greyireland"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ftlog = "0.2.9"
log = "0.4.20"