[package]
name = "logo"
version = "0.2.1"
edition = "2021"
description = "init log env quickly"
license = "MIT"
homepage = "https://github.com/greyireland/logo"
authors = ["greyireland"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
tracing = "0.1.36"
tracing-subscriber = {version="0.3.15",features = ["local-time","env-filter"]}
tracing-appender = "0.2.2"