[package]
name = "logo"
version = "1.1.2"
edition = "2021"
description = "init log env quickly"
license = "MIT"
homepage = "https://github.com/greyireland/logo"
authors = ["greyireland"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ftlog = "0.2.14"
log = "0.4.22"